fix fatal errors and code refactor